<?xml version="1.0"?>
<package>
  <name>peg_lwr_robot</name>
  <version>0.1.0</version>
  <description>The peg_lwr_robot package</description>

  <maintainer email="guillaume.dechambrier@epfl.ch">Guillaume de Chambrier</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>lwr_hw</run_depend>
  <run_depend>lwr_description</run_depend>
  <run_depend>lwr_controllers</run_depend>

  <export>
  </export>
</package>
